# exper-fsm-0

./: Cargo.toml  README.md  run-criterion.sh
benches/: bench_current_state_enum.rs  bench_current_state_fn_ptr.rs  bench_enum_state_machine.rs  bench_fn_ptr_state_machine.rs
reports/criterion/: README.md
reports/criterion/0170e03/: 22-05-14T20-48-11.801Z.json
reports/criterion/20dd9db/: 22-05-13T20-45-34.380Z.json  22-05-13T20-54-01.514Z.json
reports/criterion/a8976a8/: 22-05-14T17-27-36.066Z.json
reports/criterion/c3a222c/: 22-07-04T17-29-06.813Z.json
reports/criterion/c4844df/: 22-07-05T21-44-17.558Z.json
src/: enum_state_machine.rs  fn_ptr_hsm.rs  fn_ptr_state_machine.rs  lib.rs  main.rs
