[package]
name = "expr-fsm-0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom-logger = { git = "https://github.com/winksaville/custom-logger", version = "0.1.0" }
#log = "0.4.17"
log = { version = "0.4.17", features = ["release_max_level_off"] }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench_enum_state_machine"
harness = false

[[bench]]
name = "bench_fn_ptr_state_machine"
harness = false
